<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.wiatt.custom_view.customViewTouchDrag.DragListenerViewGroup
        android:id="@+id/vgDragListener"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/vLine"
        app:layout_constraintVertical_weight="1">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:contentDescription="@string/red"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:contentDescription="@string/orange"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:contentDescription="@string/yellow"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:contentDescription="@string/green"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:contentDescription="@string/blue"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/indigo"
            android:contentDescription="@string/indigo"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:contentDescription="@string/purple"/>

    </com.wiatt.custom_view.customViewTouchDrag.DragListenerViewGroup>

    <View
        android:id="@+id/vLine"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vgDragListener"
        app:layout_constraintBottom_toTopOf="@id/vgDragHelper"/>

    <com.wiatt.custom_view.customViewTouchDrag.DragHelperViewGroup
        android:id="@+id/vgDragHelper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="4" >

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"/>

        <ImageView
            android:id="@+id/iv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"/>

        <ImageView
            android:id="@+id/iv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"/>

        <ImageView
            android:id="@+id/iv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"/>

        <ImageView
            android:id="@+id/iv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"/>

        <ImageView
            android:id="@+id/iv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"/>

        <ImageView
            android:id="@+id/iv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"/>

        <ImageView
            android:id="@+id/iv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"/>

    </com.wiatt.custom_view.customViewTouchDrag.DragHelperViewGroup>

</androidx.constraintlayout.widget.ConstraintLayout>